updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a coding bootcamp student in SLC, currently working in the medical device industry</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from Kansas City, Missouri</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to scuba dive and fly fish. I also love to cook!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Charter Sailboat captain... I don't really know.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Salt Lake City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'd like to give my Career Arc a bit more flexablility and gain the skills necessary to work in a variety of industries!</p>
     </section>
 
     <footer id="footer">
